# kube-janitor

./: Dockerfile  Makefile  README.md  pyproject.toml
deploy/: deployment.yaml
kube_janitor/: cmd.py  helper.py  janitor.py  main.py  resource_context.py  resources.py  rules.py
tests/: test_clean_up.py  test_main.py  test_resources.py
unsupported/helm/: Chart.yaml  index.yaml  kube-janitor-0.1.0.tgz  kube-janitor-0.2.0.tgz  kube-janitor-0.3.1.tgz
